[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyadi-iio"
dynamic = ["version", "readme"]
description = "Analog Devices python interfaces for hardware with Industrial I/O drivers"
license = {text = "ADI BSD"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"]
requires-python = ">=3.8"
authors = [
    {name = "Travis Collins", email="travis.collins@analog.com"},
]
maintainers = [
    {name = "Travis Collins", email="travis.collins@analog.com"},
    {name = "Analog Devices, Inc"}
]
dependencies = [
    'numpy >= 1.20',
    'pylibiio >= 0.25',
]

[tool.setuptools.dynamic]
version = {attr = "adi.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["adi"]
exclude = ["test*"]
namespaces = true

[project.optional-dependencies]
jesd = [
    "paramiko"
]

[project.urls]
homepage = "https://analogdevicesinc.github.io/pyadi-iio/"
documentation = "https://analogdevicesinc.github.io/pyadi-iio/"
repository = "https://github.com/analogdevicesinc/pyadi-iio"

[tool.ruff]
exclude = [
    "test/imu"
]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-third-party = ["iio"]

[tool.mypy]
ignore_missing_imports="true"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--custom-hw-map=test/emu/hardware_map.yml --emu-xml-dir=test/emu/devices"
testpaths = [
    "test",
]
