[metadata]
name = pyadi-iio
version = attr: adi.__version__
author = Analog Devices, Inc.
author_email = travis.collins@analog.com
description = Analog Devices python interfaces for hardware with Industrial I/O drivers
long_description = file: README.md
long_description_content_type = text/markdown
license = ADI BSD
url = https://analogdevicesinc.github.io/pyadi-iio/
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    numpy >= 1.20
    pylibiio >= 0.23.1

[options.extras_require]
jesd = paramiko

[options.packages.find]
exclude = test*

[bumpversion]
current_version = attr: adi.__version__
commit = True
tag = True

[bumpversion:file:adi/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:doc/source/conf.py]
search = release = "{current_version}"
replace = release = "{new_version}"

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, E501, W503, F401, F403
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
exclude = test/*,examples/*,doc/*,images/*

[mypy]
ignore_missing_imports=true
